--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "jquery": "^2.2.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-router": "^1.0.3"
+    "react-mixin": "^3.0.3",
+    "react-router": "^1.0.3",
+    "reflux": "^0.3.0"
   },
   "devDependencies": {
     "babel-core": "^5.0.10",
